--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,16 +1,26 @@
-version: "3"
+version: "3.4"
 
 services:
   rabbitmq-service:
     image: ${IMAGE_REPO}rabbitmq-mqtt:${VERSION}
     hostname: rabbitmq-service
     ports:
-      - 5672:5672
-      - 15672:15672
-      - 15675:15675
+      - 5671:5671 # ssl amqp
+      - 5672:5672 # normal amqp
+      - 15672:15672 # ssl/normal management
+      - 15673:15673 # ssl websocket mqtt
+      - 15675:15675 # normal websocket mqtt
+      - 1883:1883 # normal tcp mqtt
+      - 8883:8883 # ssl tcp mqtt
+    secrets:
+      - site.crt
+      - site.ca
+      - site.key
+    configs:
+      - source: rabbitmq.ssl.conf
+        target: /etc/rabbitmq/rabbitmq.conf
     environment:
-      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USERNAME}
-      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASSWORD}
+      RABBITMQ_NODENAME: rabbit
     networks:
       - backend_network
     volumes:
@@ -21,6 +31,20 @@ services:
 
 networks:
   backend_network:
+    external: true
+
+secrets:
+  site.crt:
+    external: true
+  site.ca:
+    external: true
+  site.key:
+    external: true
+
+configs:
+  rabbitmq.ssl.conf:
+    external: true
 
 volumes:
   rabbitmq_data:
+    external: true
