--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,5 @@ __pycache__/
 
 src/docker-compose.publish.*.yml
 src/docker-compose.build.*.yml
+src/docker-compose.digest.*.yml
+src/docker-compose.digest.yml
